2013-11-20  Daniel Ramirez <javamonn@gmail.com>

	* libc/include/search.h, libc/search/tdelete.c: Add restrict keyword.

2013-11-20  Chirayu Desai  <chirayudesai1@gmail.com>

	* libc/include/regex.h, libc/posix/regcomp.c,
	libc/posix/regerror.c, libc/posix/regex.3
	libc/posix/regexec.c: Add restrict keyword.

2013-11-20  Daniel Ramirez <javamonn@gmail.com>

	* libc/iconv/lib/iconv.c, libc/include/iconv.h, 
	libc/sys/linux/iconv/iconv.c: Add restrict keyword.

2013-11-20  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/stdlib.h: Declare realpath only if !__STRICT_ANSI__.

2013-11-19  Jennifer Averett <jennifer.averett@oarcorp.com>

	* libc/sys/rtems/sys/cpuset.h: New file.

2013-11-19  Joel Sherrill <joel.sherrill@oarcorp.com>

	* libc/include/stdlib.h: Add prototype of realpath().
	* libc/sys/linux/realpath.c: Add restrict keyword.

2013-11-19  Joel Sherrill <joel.sherrill@oarcorp.com>

	* libm/common/modfl.c: Add cast to remove compiler warning.

2013-11-19  Terraneo Federico  <fede.tft@hotmail.it>

	* libc/posix/closedir.c: Fix use after free.
	Remove useless test dd_fd != -1
	* libc/posix/readdir.c: Remove useless test dd_fd == -1
	* libc/posix/readdir_r.c: Ditto.

2013-11-18  Sahil Patnayakuni  <sahilp@oarcorp.com>

	* libc/include/stdio.h, libc/machine/powerpc/vfscanf.c,
	libc/machine/spu/fgetpos.c, libc/machine/spu/fgets.c,
	libc/machine/spu/fopen.c, libc/machine/spu/fputs.c,
	libc/machine/spu/fread.c, libc/machine/spu/freopen.c,
	libc/machine/spu/fwrite.c, libc/machine/spu/setbuf.c,
	libc/machine/spu/vfprintf.c, libc/machine/spu/vfscanf.c,
	libc/machine/spu/vsnprintf.c, libc/machine/spu/vsprintf.c,
	libc/machine/spu/vsscanf.c, libc/stdio/asnprintf.c,
	libc/stdio/asprintf.c, libc/stdio/dprintf.c,
	libc/stdio/fgetpos.c, libc/stdio/fgets.c,
	libc/stdio/fmemopen.c, libc/stdio/fopen.c,
	libc/stdio/fprintf.c, libc/stdio/fputs.c,
	libc/stdio/fread.c, libc/stdio/freopen.c,
	libc/stdio/fscanf.c, libc/stdio/fwrite.c,
	libc/stdio/printf.c, libc/stdio/scanf.c,